# compiz-plugins-community

./: Makefile.am  NEWS.md  configure.ac
icons/: Makefile.am
include/: Makefile.am
metadata/: Makefile.am  sndogg.xml.in  wiimote.xml.in
src/: Makefile.am
src/alsa/: Makefile.am
src/ogg/: Makefile.am
src/portaudio/: Makefile.am
src/prompt/: prompt.c
src/sound/: Makefile.am
src/soundeffects/: Makefile.am
