## Process this file with automake to produce Makefile.in

SUBDIRS =              \
	boing              \
	desktopclick       \
	flash              \
	headtracking       \
	lazypointer        \
	maze               \
	mousegestures      \
	newton             \
	ogg                \
	peek               \
	portaudio          \
	prompt             \
	roach              \
	rubik              \
	sound              \
	soundeffects       \
	visualevent        \
	wiimote            \
	wiitrack
