## Process this file with automake to produce Makefile.in
##	visualevent        \
##	wiimote            \

SUBDIRS =              \
	boing              \
	flash              \
	headtracking       \
	lazypointer        \
	maze               \
	mousegestures      \
	newton             \
	peek               \
	prompt             \
	roach              \
	rubik              \
	wiitrack
